--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Portfolio-Saisha</title>
 </head>
 <body>
-    <h1>This is a test page</h1>
+    <h1>username.github.io/portfolio</h1>
 </body>
 </html>
