--- a/index.html
+++ b/index.html
@@ -1,11 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio-Saisha</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.0/css/all.min.css" integrity="sha512-9xKTRVabjVeZmc+GUW8GgSmcREDunMM+Dt/GrzchfN8tkwHizc5RP4Ok/MXFFy5rIjJjzhndFScTceq5e6GvVQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-    <h1>username.github.io/portfolio</h1>
+    <!-- Header Section -->
+    <header>
+        <nav>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#skills">Skills</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <!-- Hero Section -->
+     <section class="hero">
+        <div class="hero-content">
+            <h1>Hi, I'm Saisha!</h1>
+            <p>A passionate high school Computer Science Student!</p>
+            <a href="https://github.com/SaishaPatel" class="cta-button">See My Work</a>
+        </div>
+     </section>
+
+     <!-- About Section -->
+      <section id="about" class="about">
+        <h2>About Me</h2>
+        <p>I'm a high school student with a keen interest in learning programming.</p>
+      </section>
 </body>
 </html>
