--- a/index.html
+++ b/index.html
@@ -35,5 +35,27 @@
         <h2>About Me</h2>
         <p>I'm a high school student with a keen interest in learning programming.</p>
       </section>
+
+      <!-- Skills Section -->
+       <section class="skills" id="skills">
+        <h2>Skills</h2>
+        <div class="skill-list">
+            <div class="skill-item">
+                <i class="fa-solid fa-code fa-bounce fa-2xl" style="color: #67bbc1;"></i>
+                <h3>Languages</h3>
+                <p>HTML/CSS, JavaScript, Python, Java</p>
+            </div>
+            <div class="skill-item">
+                <i class="fa-brands fa-python fa-bounce fa-2xl" style="color: #67bbc1;"></i>
+                <h3>Frameworks</h3>
+                <p>Flask, Django</p>
+            </div>
+            <div class="skill-item">
+                <i class="fa-brands fa-git fa-bounce fa-2xl" style="color: #67bbc1;"></i>
+                <h3>Tools</h3>
+                <p>Git, GitHub, VS Code, MySQL</p>
+            </div>
+        </div>
+       </section>
 </body>
 </html>
