11/21 - Projects Section Completed

--- a/index.html
+++ b/index.html
@@ -57,5 +57,28 @@
             </div>
         </div>
        </section>
+
+       <!-- Projects Section -->
+        <section class="project" id="project">
+            <h2>Projects</h2>
+            <div class="project-list">
+                <div class="project-item">
+                    <img src="images/portfolio.png" alt="" width="300px" height="200px">
+                    <h3>Personal Portfolio</h3>
+                    <p>A website to showcase my projects and skills built with HTML, CSS, and JavaScript.</p>
+                </div>
+                <div class="project-item">
+                    <img src="images/game.gif" alt="" width="300px" height="200px">
+
+                    <h3>Simple Python Game</h3>
+                    <p>A fun game built using Python that allows players to interact with a graphical interface.</p>
+                </div>
+                <div class="project-item">
+                    <img src="images/webapp.png" alt="" width="300px" height="200px">
+                    <h3>Full Stack Web App</h3>
+                    <p>A combination of front-end with back-end framework and databases to deliver dynamic and responsive functionality. </p>
+                </div>
+            </div>
+        </section>
 </body>
 </html>
