11/21 - Project Section Completed (updated)

--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
        </section>
 
        <!-- Projects Section -->
-        <section class="project" id="project">
-            <h2>Projects</h2>
+        <section class="projects" id="projects">
+            <h2>My Projects</h2>
             <div class="project-list">
                 <div class="project-item">
                     <img src="images/portfolio.png" alt="" width="300px" height="200px">
