--- a/index.html
+++ b/index.html
@@ -80,5 +80,50 @@
                 </div>
             </div>
         </section>
+
+        <!-- Contact Section -->
+         <section id="contact" class="contact">
+            <h2>Contact Me</h2>
+            <p>I'd love to connect! Feel free to reach out for collaboration, feedback, or opportunities.</p>
+            <div class="contact-container">
+                <!-- Left Side -->
+                <div class="contact-info">
+
+                <div class="contact-item">
+                    <i class="fa-solid fa-envelope fa-2xl" style="color: #67bbc1;"></i>
+                    <h3>Email</h3>
+                    <p><a href="mailto:saipat28@bergen.org">saipat28@bergen.org</a></p>
+                </div>
+
+                <div class="contact-item">
+                    <i class="fa-brands fa-github fa-2xl" style="color: #67bbc1;"></i>
+                    <h3>GitHub</h3>
+                    <p><a href="https://github.com/SaishaPatel">https://github.com/SaishaPatel</a></p>
+                </div>
+
+                <div class="contact-item">
+                    <i class="fa-brands fa-linkedin fa-2xl" style="color: #67bbc1;"></i>
+                    <h3>Linkedin</h3>
+                    <p><a href="https://github.com/SaishaPatel">linkedin.com/saipat</a></p>
+                </div>
+
+                </div>
+
+                <!-- Right Side -->
+                <div class="contact-form">
+                    <h3>Send Me a Message</h3>
+                    <form action="">
+                        <input type="text" name="name" id="" placeholder="Your Name">
+                        <input type="email" name="name" id="" placeholder="Your Email">
+                       <textarea name="mesage" id="" placeholder="Your Message"></textarea>
+                       <button type="submit" class="cta-button">Send Mesage</button>
+                    </form>
+                </div>
+            </div>
+         </section>
+
+         <footer>
+            <p>&copy;2024 All Rights Reserved.</p>
+         </footer>
 </body>
 </html>
